fix(recordings): fix recording filters from being cutoff in nested archived recordings tables (#557)
* fixed issues

* just add an optional menuAppendTo option in []Filter components and set to default inline in the snapshot tests

* prettier

* changed z-index of recording table so that filter dropdown is always above, and changed the recordings headers to always be sticky, fixed tests

* prettier

* adjusted px heights to relative heights

* change filter select size 10em -> 16em

* prettier

* fixed max-height to height for recording table container

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -75,5 +75,5 @@ html, body, #root {
 }
 
 .recording-table-container {
-  height: 512px;
+  height: 32rem;
 }
